<resources>
    <string name="app_name">麦芽糖</string>
    <string name="StuRegister">注册</string>
    <string name="StuName">姓名</string>
    <string name="StuNumber">学号/编号</string>
    <string name="StuMajor">专业</string>
    <string name="StuPhone">手机号</string>
    <string name="StuPassword1">密码</string>
    <string name="StuPassword2">确认密码</string>
    <string name="StuCode">验证码</string>
    <string name="GetCode">获取验证码</string>
    <string name="StuLogin">返回登录</string>
    <string name="Success_Register">注册成功</string>
    <string name="Fail_Register">服务器异常，请稍后重试</string>
    <string name="Success_GetCode">验证码已发送</string>
    <string name="is_Register_number">该学号已经被注册过</string>
    <string name="is_Register_phone">该手机号已经被注册过</string>
    <string name="number">学号/编号</string>
    <string name="Login">登录</string>
    <string name="new_user_register">新用户注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="Major_Or_Work">专业/部门</string>
    <string name="msg">提示：学生学号为10位数字，教师编号为5位数字</string>
    <string name="NumberOrPasswordIsNull">学号/编号或者密码为空</string>
    <string name="NumberOrPasswordError">学号/编号格式错误</string>
    <string name="Ok">确定</string>
    <string name="PhoneError">手机号不正确</string>
    <string name="PhoneIsNotRegister">该手机号尚未注册</string>
    <string name="Pass1AndPass2Error">密码不能为空且两次密码需相同</string>
    <string name="userInfo">个人资料</string>
    <string name="banbengengxin">版本更新</string>
    <string name="guanyu">关于</string>
    <string name="exit">退出登录</string>
    <string name="ModifyInfoSuccess">修改信息成功</string>
    <string name="Fail_Register_HeadImage_Error">服务器异常，请稍后重试</string>
    <string name="cancle">取消</string>
    <string name="userinfo">个人资料</string>
    <string name="Modify">确认修改</string>
    <string name="back_user_center">返回个人中心</string>
    <string name="change_Phone">更换手机号</string>
    <string name="ModifyPassword">修改密码</string>
    <string name="is_use_phone">该手机号已经被占用</string>
    <string name="back_user_Info">返回个人资料</string>
    <string name="oldPassword">旧密码</string>
    <string name="Teacher_new_Password">新密码</string>
    <string name="all_books">所有课程</string>
    <string name="book_name">课程名称</string>
    <string name="Teacher_name">开课老师</string>
    <string name="search">搜索</string>
    <string name="book_content">课程内容</string>
    <string name="File_path">选择或者输入课程文件路径</string>
    <string name="choice_path">选择路径</string>
    <string name="preview_bookContent">阅览课程内容</string>
    <string name="add_book">添加课程</string>
    <string name="id">ID</string>
    <string name="content">课程内容</string>
    <string name="open_bookContent">打开课件</string>
    <string name="user_name">用户姓名</string>
    <string name="message_name">留言内容</string>
    <string name="time">时间</string>
</resources>
