<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color1"
    tools:context=".activity.user_activity.Student_Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@mipmap/back"
            android:layout_marginLeft="20sp"
            android:id="@+id/back_Login"
            android:onClick="click"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/StuRegister"
            android:gravity="center"
            android:textSize="25dp"
            android:paddingRight="50sp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:text="@string/msg"
        android:paddingLeft="17sp"
        android:textColor="@color/color4"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingTop="25dp"
        >
        <EditText
            android:id="@+id/StuName"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="text"
            android:hint="@string/StuName"
            />
        <EditText
            android:hint="@string/StuNumber"
            android:id="@+id/StuNumber"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/StuMajor"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/Major_Or_Work"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/StuPassword1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/StuPassword1"
            />

        <EditText
            android:id="@+id/StuPassword2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/StuPassword2"
            />

        <EditText
            android:id="@+id/StuPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/StuPhone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/StuCode"
                android:layout_width="220sp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/StuCode"
                />
            <Button
                android:id="@+id/GetCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GetCode"
                android:textSize="16sp"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="click"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:paddingTop="25dp"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color2"
                android:text="@string/StuRegister"
                android:textColor="@color/color3"
                android:textSize="25dp"
                android:id="@+id/Register"
                android:onClick="click"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>