<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user_activity.Login_Activity"
    android:orientation="vertical"
    android:background="@color/color1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="登录"
            android:textSize="25dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingTop="50dp">
        <ImageView
            android:id="@+id/imageview1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/morentouxiang4" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/number"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/login_number"
            android:paddingLeft="10dp"
            android:inputType="number"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/StuPassword1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:paddingLeft="10dp"/>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color2"
                android:text="@string/Login"
                android:textColor="@color/color3"
                android:textSize="25dp"
                android:id="@+id/login"
                android:onClick="click"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_register"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="70sp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="click"
            android:id="@+id/GoToRegister"
            />

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="管理员登录"-->
            <!--android:textSize="16sp"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <!--android:onClick="click"-->
            <!--android:id="@+id/AdminLogin"-->
            <!--/>-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:id="@+id/forget_password"
            android:layout_marginLeft="145sp"
            />
    </LinearLayout>
</LinearLayout>