<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.user_activity.forget_password_MainActivity"
    android:background="@color/color1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@mipmap/back"
            android:layout_marginLeft="20sp"
            android:id="@+id/Teacher_user_backUserInfo"
            android:onClick="click"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="更换手机"
            android:textSize="25dp"
            android:paddingRight="50sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StuPhone"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:id="@+id/Teacher_user_chagngePhone"
            android:inputType="number"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StuCode"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:id="@+id/Teacher_user__Code"
            android:inputType="number"
            />
        <Button
            android:id="@+id/Teacher_user__GetCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GetCode"
            android:textSize="15dp"
            android:onClick="click"
            android:textColor="@color/colorPrimaryDark"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <Button
            android:onClick="click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ok"
            android:textSize="20sp"
            android:id="@+id/Teacher_user_Determine"
            android:background="@color/color2"
            />
    </LinearLayout>

</LinearLayout>