<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.message_activity.Message_Detail_Activity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="5dp"
        android:background="@color/color7"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30sp"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:layout_marginLeft="20sp"
            android:id="@+id/message_reply_back"
            android:onClick="click"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="60sp"
            android:text="留言详情"
            android:textSize="25sp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:paddingTop="22sp"
        android:id="@+id/message_detail_time"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="50sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="100sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:id="@+id/message_detail_username"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_name"
            android:layout_marginLeft="10sp"
            android:id="@+id/message_detail_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/id"
            android:id="@+id/message_id"
            />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:layout_marginLeft="20sp"
        android:id="@+id/message_reply_show"
        >
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="回复"
        android:textSize="20sp"
        android:layout_marginLeft="10sp"
        />

        <EditText
            android:layout_width="270sp"
            android:layout_height="wrap_content"
            android:id="@+id/message_details_replycontent"
            android:textSize="15dp"
            />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:id="@+id/message_detail_send"
            android:onClick="click"
            android:background="@color/color3"
            android:src="@mipmap/fabiao"
            />
    </LinearLayout>

</RelativeLayout>